--- a/templates/report-template.html
+++ b/templates/report-template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; script-src https://cdn.jsdelivr.net 'unsafe-inline'; img-src data:; font-src 'none';">
-    <title>M365 Security Assessment Report - {{TENANT_NAME}}</title>
+    <title>M365 Security Guardian Report - {{TENANT_NAME}}</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js" integrity="sha384-e6nUZLBkQ86NJ6TVVKAeSaK8jWa3NhkYWZFomE39AvDbQWeie9PlQqM3pmYW5d1g" crossorigin="anonymous"></script>
     <style>
         :root {
@@ -804,7 +804,7 @@
     <div class="container">
         <div class="header">
             <div class="header-content">
-                <h1>Microsoft 365 Security Assessment Report</h1>
+                <h1>M365 Security Guardian Report</h1>
                 <div class="header-meta">
                     <div class="header-meta-item">
                         <span class="header-meta-label">Tenant:</span>
